--- a/starwars/src/App.css
+++ b/starwars/src/App.css
@@ -6,3 +6,15 @@
   text-shadow: 1px 1px 5px #fff;
 }
 /* write your parent styles in here for your App.js */
+div.class-list{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+div.character-card{
+  background-color: white;
+  width: 30%;
+  margin: 10px;
+  border-radius: 10px;
+}
