--- a/starwars/src/App.css
+++ b/starwars/src/App.css
@@ -13,8 +13,31 @@ div.class-list{
   justify-content: center;
 }
 div.character-card{
-  background-color: white;
+  background-color: rgb(0, 0, 0);
+  color: white;
   width: 30%;
   margin: 10px;
   border-radius: 10px;
+}
+
+div.character-card:hover{
+  background-color: rgb(255, 255, 255);
+  color: rgb(0, 0, 0);
+  width: 32%;
+  margin: 10px;
+  border-radius: 10px;
+  transition: 1s;
+  border: 3px solid black;
+  
+}
+
+h1{
+  padding: 10px;
+  background-color: rgb(255, 255, 255);
+  color: rgb(0, 0, 0);
+  width: 70%;
+  margin: 10px;
+  border-radius: 10px;
+  border: 3px solid black; 
+  margin: 0 auto;
 }
